Revert "Truls og Frederik var ikke til stede"
This reverts commit 03341be3d8ed6bb43d6fd21a19ff3ea26bbf1dd3.

--- a/referat.tex
+++ b/referat.tex
@@ -242,8 +242,9 @@ Enstemmigt vedtaget.
 \begin{tabular}{rl}
 Niels Gustav Westphal Serup (formand) \hspace{4mm}&\hspace{4mm} Alexander Scheurer (næstformand)\\[10mm]
 &\hspace{-28mm}Oleksandr Shturmov (kasserer)\\[10mm]
+Frederik Kallestrup Mastratisi \hspace{4mm}&\hspace{4mm} Maja Ling Han\\[10mm]
 Mikkel Storgaard Knudsen \hspace{4mm}&\hspace{4mm} Simon Rotendahl\\[10mm]
-Troels Kamp Leskes \hspace{4mm}&\hspace{4mm} Maja Ling Han\\[10mm]
+Troels Kamp Leskes \hspace{4mm}&\hspace{4mm} Truls Asheim\\[10mm]
 &\hspace{-28mm}Vivien Lewkowicz de Neergaard\\[10mm]
 \end{tabular}
 \end{center}
